This file lists all changes made to the game driver in all glory detail.
See the file HISTORY for a user-oriented summary of all the changes.

12-May-2009 (Fuchur)
  - (prolang.y) Fix infinite loop when redefining a closure argument
     in its closure's context.

11-May-2009 (Gnomi)
  - (sprintf.c) Don't rely on overflow, as gcc optimizes away overflow checks.

10-May-2009 (Zesstra)
  - (smalloc.c, slaballoc.) Replaced SINT by GRANULARITY
    The define SINT was ill-named. All occurences were renamed to GRANULARITY
    which describes the semantics of the define much better and it is now
    defined as being sizeof(word_t).
    Additionally, MEM_ALIGN is now defined as being the same as GRANULARITY.
  - (xalloc.c) Replaced define by enum.
    The defines for the header fields of memory blocks were replaced by an enum.
    Additionally a comment about word_t is added.
  - (xalloc.c) Fixed syntactial errors in pre-compiler statements.
    Because MEM_ALIGN is now a sizeof() expression, it can't be used in
    conditional compilation. Replaced them by real if() (which are eliminated
    by the compiler because their expression is constant).
  - (object.c) Fixed buffer overflow in save_svalue() (#634)
    save_svalue() used PRIx16 to print the exponent of a float. Unfortunately,
    on some systems PRIx16 is %x, although int16_t is a short. This causes a
    signed conversion (which keeps the value) and then 0xffffffff is written.
    Even if the buffer is large enough, upon restore with SCNx16 (%hx) a wrong
    value would be restored. *args*
    Additionally all sprintf(), which write into number_buffer were replaced
    by snprintf().

06-May-2009 (Zesstra)
  - (hosts/) The hosts/ directory was removed.
    Removed the whole hosts/ directory because it wasn't maintained for a long
    time and most of the systems were anyway dead for a long time (#625).
    This removed --enable-use-system-crypt as well (#624).